# ai-developer-pod

./: README.md
design/: api.yaml  plan.md  schema.sql
server/: main.py  models.py  schemas.py
strands-sdk-test/: .gitignore  README.md  biz_agent.py  design_agent.py  dev_agent.py  graph_agent.py  hello.py  pyproject.toml  requirements.txt  test_agent.py
strands-sdk-test/ai_models/: gemini_model.py  mistral_model.py  ollama_model.py
strands-sdk-test/tools/: websearch_tool.py
