[project]
name = "crewai-sdlc-agents"
version = "0.1.0"
description = "SDLC multi-agent system using CrewAI"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.108.0",
    "crewai-tools>=0.45.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.crewai]
name = "crewai-sdlc-agents"